--- a/src/app/protected/cranix/devices/add-device/add-device.component.html
+++ b/src/app/protected/cranix/devices/add-device/add-device.component.html
@@ -12,63 +12,63 @@
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
-  <ion-content fullscreen>
+  <ion-content fullscreen *ngIf="addDeviceForm">
     <form [formGroup]="addDeviceForm" (ngSubmit)="onSubmit(addDeviceForm.value)" >
     <ion-list lines="full">
       <ion-item *ngIf="roomsToSelect && device">
         <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
-        <ion-select type="text" formControlname="roomId" (ionChange)="roomChanged($event)" required [compareWith]="objectService.compareFn">
+        <ion-select type="text" formControlName="roomId" (ionChange)="roomChanged($event)" [compareWith]="objectService.compareFn">
           <ion-select-option *ngFor="let room of roomsToSelect | async" value="{{room.id}}">{{room.name}}
           </ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item *ngIf="!addHocRooms && device && ipAdresses">
-        <ion-label  position="stacked">{{'ip'| translate}}</ion-label>
-        <ion-select type="text"  formControlname="ip" (ionChange)="ipChanged($event)" required [disabled]="!roomId">
-          <ion-select-option *ngFor="let ip of ipAdresses | async" value="{{ip}}">{{ip}}</ion-select-option>
+        <ion-label position="stacked">{{'ip'| translate}}</ion-label>
+        <ion-select type="text"  formControlName="ip" (ionChange)="ipChanged($event)" >
+          <ion-select-option *ngFor="let ip of ipAdresses " value="{{ip}}">{{ip.split(' ')[0]}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item *ngIf="device">
         <ion-label position="stacked">{{'name'|translate}}</ion-label>
-        <ion-input type="text" text-right formControlname="name" name="name" required [disabled]="!roomId"></ion-input>
+        <ion-input type="text" formControlName="name" name="name" ></ion-input>
       </ion-item>
       <ion-item *ngIf="!addHocRooms">
         <ion-label position="stacked">{{'hwconfId'| translate}}</ion-label>
-        <ion-select formControlName="hwconfId" required [compareWith]="objectService.compareFn" [disabled]="!roomId">
-          <ion-select-option *ngFor="let hw of objectService.selects['hwconfId']" value="{{hw}}">
-            {{hw | idToName:'hwconf'}}
+        <ion-select formControlName="hwconfId" [compareWith]="objectService.compareFn" >
+          <ion-select-option *ngFor="let hw of hwConfs | async" value="{{hw.id}}">
+            {{hw.name}}
           </ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item *ngIf="!addHocRooms; else room">
         <ion-label position="stacked">{{'mac'|translate}}</ion-label>
-        <ion-textarea type="text" formControlName="mac" required="true" [disabled]="!roomId"></ion-textarea>
+        <ion-textarea type="text" formControlName="mac"></ion-textarea>
       </ion-item>
       <ng-template #room>
         <ion-item >
           <ion-label position="stacked">{{'mac'|translate}}</ion-label>
-          <ion-input type="text" formControlName="mac" required="true" [disabled]="!roomId"></ion-input>
+          <ion-input type="text" formControlName="mac"></ion-input>
         </ion-item>
       </ng-template>
       <ion-item *ngIf="!addHocRooms">
         <ion-label position="stacked">{{'wlanMac'|translate}}</ion-label>
-        <ion-input type="text"  formControlName="wlanMac" [disabled]="!roomId"></ion-input>
+        <ion-input type="text"  formControlName="wlanMac" ></ion-input>
       </ion-item>
       <ion-item *ngIf="!addHocRooms">
         <ion-label position="stacked">{{'serial'|translate}}</ion-label>
-        <ion-input type="text"   formControlName="serial" [disabled]="!roomId"></ion-input>
+        <ion-input type="text"   formControlName="serial" ></ion-input>
       </ion-item>
       <ion-item *ngIf="!addHocRooms">
         <ion-label position="stacked">{{'inventary'|translate}}</ion-label>
-        <ion-input type="text"   formControlName="inventary" [disabled]="!roomId"></ion-input>
+        <ion-input type="text"   formControlName="inventary" ></ion-input>
       </ion-item>
       <ion-item *ngIf="!addHocRooms">
         <ion-label position="stacked">{{'row'|translate}}</ion-label>
-        <ion-input type="text"  formControlName="row" [disabled]="!roomId"></ion-input>
+        <ion-input type="text"  formControlName="row" ></ion-input>
       </ion-item>
       <ion-item *ngIf="!addHocRooms">
         <ion-label position="stacked">{{'place'|translate}}</ion-label>
-        <ion-input type="text"  formControlName="place" [disabled]="!roomId"></ion-input>
+        <ion-input type="text"  formControlName="place" ></ion-input>
       </ion-item>
     </ion-list>
     </form>
