--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -40,7 +40,7 @@
             matTooltip="{{'Delete selected access rules' | translate }}">
             <ion-icon slot="icon-only" name="trash"></ion-icon>
           </ion-button>
-          <ion-button *ngIf="segment == 'list'" size="small" (click)="createColumDef()"
+          <ion-button *ngIf="segment == 'list'" size="small" (click)="createColumnDef()"
             matTooltip="{{'Change grouping of the table' | translate }}">
             <ion-icon slot="icon-only" name="list"></ion-icon>
           </ion-button>
@@ -51,20 +51,11 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular *ngIf="segment == 'list'" 
-        #accessGrid style="width: 100%; height: 100%;"
-        id="accessGridTable"
-        class="{{authService.settings.agGridThema}}"
-        [modules]="modules"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        rowSelection="multiple"
-        [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef"
-        [autoGroupColumnDef]="autoGroupColumnDef"
-        [animateRows]="true"
-        [rowData]="rowData"
-        [context]="context"
-        [deltaColumnMode]="true"
+      <ag-grid-angular *ngIf="segment == 'list'" #accessGrid style="width: 100%; height: 100%;" id="accessGridTable"
+        class="{{authService.settings.agGridThema}}" [modules]="modules"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" rowSelection="multiple"
+        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [autoGroupColumnDef]="autoGroupColumnDef"
+        [animateRows]="true" [rowData]="rowData" [context]="context" [deltaColumnMode]="true"
         (gridReady)="accessGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
