--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -59,23 +59,39 @@
           </ion-button>
         </ion-col>
       </ion-row>
+      <ion-row *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix'">
+        <ion-col size=12>
+          <form #addNewDomainForm="ngForm">
+            <ion-item>
+              <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
+                pattern="[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
+              <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
+                <ion-icon slot="icon-only" name="add"></ion-icon>
+              </ion-button>
+            </ion-item>
+          </form>
+        </ion-col>
+      </ion-row>
     </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular *ngIf="segment == 'basic'" style="width: 100%; height: 100%;"
-        class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+    <ion-card-content *ngIf="segment == 'basic'">
+      <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [rowData]="rowData"
         [columnDefs]="columnDefs" [context]="context" (gridReady)="proxyGridReady($event)" id="proxyGridTable">
       </ag-grid-angular>
-      <ion-textarea *ngIf="segment == 'good'" inputmode="url" autoGrow="true" value="{{whiteList}}" id="good">
-      </ion-textarea>
-      <ion-textarea *ngIf="segment == 'bad'" inputmode="url" autoGrow="true" value="{{blackList}}" id="bad">
-      </ion-textarea>
-      <ion-textarea *ngIf="segment == 'cephalix'" inputmode="url" autoGrow="true" value="{{cephalixList}}"
-        id="cephalix"></ion-textarea>
+    </ion-card-content>
+    <ion-content *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix' || segment == 'positive'">
+      <ion-list>
+        <ion-item *ngFor="let dom of lists[segment]; index as i">{{dom}}
+          <ion-button slot="end" (click)="deleteDomain(i)">
+            <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </ion-list>
       <ion-grid *ngIf="segment == 'positive'">
         <ion-row>
         </ion-row>
       </ion-grid>
-    </ion-card-content>
+    </ion-content>
   </ion-card>
 </ion-content>
