--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -58,6 +58,15 @@
         [animateRows]="true" [rowData]="rowData" [context]="context" [deltaColumnMode]="true"
         (gridReady)="accessGridReady($event)">
       </ag-grid-angular>
+      <ag-grid-angular *ngIf="segment == 'status'" #accessGrid style="width: 100%; height: 100%;" id="accessGridTable"
+        class="{{authService.settings.agGridThema}}" [modules]="modules"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" rowSelection="multiple"
+        [columnDefs]="statusColumnDefs"
+        [defaultColDef]="defaultColDef"
+        [animateRows]="true"
+        [rowData]="statusData" [context]="context"
+        (gridReady)="statusGridReady($event)">
+      </ag-grid-angular>
     </ion-card-content>
   </ion-card>
 </ion-content>
