Enhance translations. Make reading own lists more stable.

--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -40,9 +40,9 @@
               value="cephalix">
               <ion-label>{{'Cephalix list' | translate}}</ion-label>
             </ion-segment-button>
-            <ion-segment-button value="positive">
+            <!-- ion-segment-button value="positive">
               <ion-label>{{'Positive lists' | translate}}</ion-label>
-            </ion-segment-button>
+            </ion-segment-button -->
           </ion-segment>
         </ion-col>
         <ion-col offset="3" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
