Use icons with more contrast.

--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -42,7 +42,7 @@
           </ion-button>
           <ion-button *ngIf="segment == 'list'" size="small" (click)="createColumnDef()"
             matTooltip="{{'Change grouping of the table' | translate }}">
-            <ion-icon slot="icon-only" name="list" color="white"></ion-icon>
+            <ion-icon slot="icon-only" name="list-sharp" color="white"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="restartFirewall()" matTooltip="{{'Restart firewall' | translate }}">
             <ion-icon slot="icon-only" name="refresh"></ion-icon>
