--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -14,13 +14,13 @@
         <ion-icon slot="icon-only" name="checkmark"></ion-icon>
       </ion-fab-button>
       <ion-fab-button *ngIf="segment == 'out'" (click)="addOutgoinRule()">
-        <ion-icon name="add-circle-outline"></ion-icon>
+        <ion-icon name="add-circle"></ion-icon>
       </ion-fab-button>
       <ion-fab-button *ngIf="segment == 'out'" (click)="deleteOutgoinRule()">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-fab-button>
       <ion-fab-button *ngIf="segment == 'remote'" size="small" (click)="addRemoteRule()">
-        <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
       </ion-fab-button>
       <ion-fab-button *ngIf="segment == 'remote'" size="small" (click)="deleteRemoteRule()">
         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
