Implementing add remove acls to groups and users.

--- a/src/app/protected/cranix/system/system.page.html
+++ b/src/app/protected/cranix/system/system.page.html
@@ -6,21 +6,20 @@
         <ion-icon name="stats-chart"></ion-icon>
         <ion-label>{{ 'System status' | translate}}</ion-label>
       </ion-tab-button>
-      
-      <!-- ion-tab-button tab="support">
-        <ion-icon name="help"></ion-icon>
-        <ion-label>{{ 'Support' | translate}}</ion-label>
-      </ion-tab-button -->
-  
+ 
       <ion-tab-button tab="config">
         <ion-icon name="cog"></ion-icon>
         <ion-label>{{ 'Server configuration' | translate}}</ion-label>
       </ion-tab-button>
 
+      <ion-tab-button tab="acls">
+        <ion-icon name="color-wand"></ion-icon>
+        <ion-label>{{ 'Acls' | translate}}</ion-label>
+      </ion-tab-button>
+  
       <ion-tab-button tab="addons">
         <ion-icon name="hammer"></ion-icon>
         <ion-label>{{ 'Addon modules' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
-  </ion-tabs>
-
+</ion-tabs>
