--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -30,7 +30,7 @@
           <ion-button size="small" (click)="addDevice($event)"  matTooltip="{{'Create a new printer device' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="addPrinter($event)" matTooltip="{{'Create a new printer queue' | translate }}" disabled>
+          <ion-button size="small" (click)="addPrinter($event)" matTooltip="{{'Create a new printer queue' | translate }}">
             <ion-icon slot="icon-only" name="print"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openActions($event,null)" matTooltip="{{'Apply actions on the selected objects' | translate }}" >
