Unify quick filter name.

--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -21,15 +21,15 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilterMD')"
-    id="quickFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilterMD')"
+    id="institutesFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
   <ion-card>
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
           <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')"
-              id="quickFilter">
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilter')"
+              id="institutesFilter">
             </ion-input>
           </ion-item>
         </ion-col>
