--- a/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
+++ b/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
@@ -16,13 +16,13 @@
       <ion-fab-button><ion-icon color="danger"  name="power-outline" (click)="deactivate($event)"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilterMD')" id="quickFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('mypositivFilterMD')" id="mypositivFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
   <ion-card>
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
           <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('mypositivFilter')" id="mypositivFilter">
             </ion-input>
           </ion-item>
         </ion-col>
