Adapt a lot of education stuff.

--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -55,6 +55,7 @@
         [rowData]="rowData"
         [autoGroupColumnDef]="autoGroupColumnDef"
         [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
         (gridReady)="onGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
