--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -44,9 +44,21 @@
             matTooltip="{{'Change grouping of the table' | translate }}">
             <ion-icon slot="icon-only" name="list-sharp" color="white"></ion-icon>
           </ion-button>
+          <ion-button *ngIf="segment == 'status'" size="small" (click)="securityService.getActualAccessStatus()"
+            matTooltip="{{'Reload actual firewall status' | translate }}">
+            <ion-icon slot="icon-only" name="arrow-redo"></ion-icon>
+          </ion-button>
           <ion-button size="small" (click)="restartFirewall()" matTooltip="{{'Restart firewall' | translate }}">
             <ion-icon slot="icon-only" name="refresh"></ion-icon>
           </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="segment == 'status'">
+        <ion-col size=12>
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsAccessFilter')" id="roomsAccessFilter">
+            </ion-input>
+          </ion-item>
         </ion-col>
       </ion-row>
     </ion-card-header>
@@ -58,13 +70,15 @@
         [animateRows]="true" [rowData]="rowData" [context]="context" [deltaColumnMode]="true"
         (gridReady)="accessGridReady($event)">
       </ag-grid-angular>
-      <ag-grid-angular *ngIf="segment == 'status'" #accessGrid style="width: 100%; height: 100%;" id="accessGridTable"
-        class="{{authService.settings.agGridThema}}" [modules]="modules"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" rowSelection="multiple"
+      <ag-grid-angular *ngIf="segment == 'status'"
+        #accessGrid style="width: 100%; height: 100%;" id="accessGridTable"
+        class="{{authService.settings.agGridThema}}"
+        [modules]="modules"
         [columnDefs]="statusColumnDefs"
         [defaultColDef]="defaultColDef"
         [animateRows]="true"
-        [rowData]="statusData" [context]="context"
+        [rowData]="securityService.actualStatus"
+        [context]="context"
         (gridReady)="statusGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
