New feature: Set the default access state for a room. Reorder security. First site is room access.

--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -17,7 +17,7 @@
         <ion-icon color="success" name="checkmark-sharp"></ion-icon>
       </ion-fab-button>
       <ion-fab-button (click)="restartProxy()">
-        <ion-icon name="refresh"></ion-icon>
+        <ion-icon name="arrow-redo" color="tertiary"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
@@ -55,7 +55,7 @@
             <ion-icon slot="icon-only" color="success" name="checkmark"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="restartProxy()" matTooltip="{{'Restart proxy.' | translate }}">
-            <ion-icon slot="icon-only" name="refresh"></ion-icon>
+            <ion-icon slot="icon-only" name="arrow-redo"  color="tertiary"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
