--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -54,7 +54,7 @@
         </ion-col>
         <ion-col  size="4" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="applyChanges()" matTooltip="{{'Apply changes' | translate }}">
-            <ion-icon slot="icon-only" name="checkmark"></ion-icon>
+            <ion-icon slot="icon-only" name="checkmark" color="success"></ion-icon>
           </ion-button>
           <ion-button *ngIf="segment == 'out'" size="small" (click)="addOutgoinRule()"
             matTooltip="{{'Add outgoing rule' | translate }}">
@@ -62,7 +62,7 @@
           </ion-button>
           <ion-button *ngIf="segment == 'out'" size="small" (click)="deleteOutgoinRule()"
             matTooltip="{{'Delete selected outgoing rule' | translate }}">
-            <ion-icon slot="icon-only" name="trash"></ion-icon>
+            <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
           </ion-button>
           <ion-button *ngIf="segment == 'remote'" size="small" (click)="addRemoteRule()"
             matTooltip="{{'Add remote access rule' | translate }}">
@@ -70,13 +70,13 @@
           </ion-button>
           <ion-button *ngIf="segment == 'remote'" size="small" (click)="deleteRemoteRule()"
             matTooltip="{{'Delete selected remote access rule' | translate }}">
-            <ion-icon slot="icon-only" name="trash"></ion-icon>
+            <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="restartFirewall()" matTooltip="{{'Restart firewall' | translate }}">
-            <ion-icon slot="icon-only" name="refresh"></ion-icon>
+            <ion-icon slot="icon-only" name="arrow-redo" color="tertiary"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="stopFirewall()" matTooltip="{{'Stop firewall' | translate }}">
-            <ion-icon slot="icon-only" name="close"></ion-icon>
+            <ion-icon slot="icon-only" name="close" color="danger"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
