--- a/src/app/protected/cranix/system/status/system-status.component.html
+++ b/src/app/protected/cranix/system/status/system-status.component.html
@@ -10,10 +10,10 @@
       <ion-icon name="arrow-forward-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="start">
-      <ion-fab-button><ion-icon name="help" (click)="support($event)"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="trending-up" (click)="update($event)"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="refresh" (click)="restart($event)"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon color="danger" name="power" (click)="shutDown($event)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="help-cricle" (click)="support($event)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="trending-up" color="tertiary" (click)="update($event)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="arrow-redo" color="tertiary" (click)="restart($event)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="power" color="danger" (click)="shutDown($event)"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
   <ion-card>
@@ -23,13 +23,13 @@
         </ion-col>
         <ion-col offset="5" size="4" class="ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="support($event)"  matTooltip="{{'Add support' | translate }}">
-            <ion-icon slot="icon-only" name="help-buoy"></ion-icon>
+            <ion-icon slot="icon-only" name="help-circle"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="update($event)"  matTooltip="{{'Update the server.' | translate }}">
-            <ion-icon slot="icon-only" name="trending-up"></ion-icon>
+            <ion-icon slot="icon-only" name="trending-up" color="tertiary"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="restart($event)" matTooltip="{{'Restart the server.' | translate }}" >
-            <ion-icon slot="icon-only" name="refresh"></ion-icon>
+            <ion-icon slot="icon-only" name="arrow-redo" color="tertiary"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="shutDown($event)" matTooltip="{{'Shut down the server.' | translate }}">
             <ion-icon slot="icon-only" color="danger" name="power"></ion-icon>
