--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -25,28 +25,26 @@
 <ion-content (window:resize)="onResize($event)">
   <ion-card>
     <ion-card-header>
-      <ion-row class="ion-align-items-center">
-        <ion-col size="3">
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilter')" id="hwconfMembersFilter">
-            </ion-input>
-          </ion-item>
-        </ion-col>
-        <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="createColumnDef()"
+      <ion-toolbar>
+        <ion-item>
+          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfMembersFilter')" id="hwconfMembersFilter">
+          </ion-input>
+        </ion-item>
+        <ion-buttons slot="end">
+          <ion-button size="small" fill="solid" (click)="createColumnDef()"
             matTooltip="{{'Change grouping of the table' | translate }}">
             <ion-icon slot="icon-only" name="list-sharp"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="triggerClone($event,'startmulticastclone')"
+          <ion-button size="small" fill="solid" (click)="triggerClone($event,'startmulticastclone')"
             matTooltip="{{'Start multicast cloning' | translate }}">
             <ion-icon slot="icon-only" name="logo-buffer" color="success"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="triggerClone($event,'stopclone')"
+          <ion-button size="small" fill="solid" (click)="triggerClone($event,'stopclone')"
             matTooltip="{{'Stop multicast cloning' | translate }}">
             <ion-icon slot="icon-only" name="logo-buffer" color="danger"></ion-icon>
           </ion-button>
-        </ion-col>
-      </ion-row>
+        </ion-buttons>
+      </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular
