--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -5,6 +5,28 @@
       <ion-title>{{ 'Manage proxy configuration' | translate}}</ion-title>
     </ion-col>
   </ion-row>
+  <ion-row>
+    <ion-col size="12">
+      <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
+        <ion-segment-button value="basic">
+          <ion-label>{{'Basic configuration' | translate}}</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="good">
+          <ion-label>{{'White list' | translate}}</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="bad">
+          <ion-label>{{'Black list' | translate}}</ion-label>
+        </ion-segment-button>
+        <ion-segment-button *ngIf="authService.session.name == 'cephalix' || authService.isAllowed('cephalix.manage')"
+          value="cephalix">
+          <ion-label>{{'Cephalix list' | translate}}</ion-label>
+        </ion-segment-button>
+        <!-- ion-segment-button value="positive">
+        <ion-label>{{'Positive lists' | translate}}</ion-label>
+      </ion-segment-button -->
+      </ion-segment>
+    </ion-col>
+  </ion-row>
   <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
     <ion-fab-button>
       <ion-icon name="arrow-forward-circle"></ion-icon>
@@ -22,56 +44,26 @@
     </ion-fab-list>
   </ion-fab>
   <ion-card>
-    <ion-card-header>
-      <ion-row>
-        <ion-col size="12" size-lg="6" size-xl="6">
-          <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
-            <ion-segment-button value="basic">
-              <ion-label>{{'Basic configuration' | translate}}</ion-label>
-            </ion-segment-button>
-            <ion-segment-button value="good">
-              <ion-label>{{'White list' | translate}}</ion-label>
-            </ion-segment-button>
-            <ion-segment-button value="bad">
-              <ion-label>{{'Black list' | translate}}</ion-label>
-            </ion-segment-button>
-            <ion-segment-button
-              *ngIf="authService.session.name == 'cephalix' || authService.isAllowed('cephalix.manage')"
-              value="cephalix">
-              <ion-label>{{'Cephalix list' | translate}}</ion-label>
-            </ion-segment-button>
-            <!-- ion-segment-button value="positive">
-              <ion-label>{{'Positive lists' | translate}}</ion-label>
-            </ion-segment-button -->
-          </ion-segment>
-        </ion-col>
-        <ion-col offset="3" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button *ngIf="segment == 'positive'" size="small" (click)="redirectToEdit($event,null)"
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
+      <ion-toolbar>
+        <ion-item *ngIf="segment == 'basic'">
+          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="proxyQuickFilter">
+          </ion-input>
+        </ion-item>
+        <ion-buttons slot="end">
+          <ion-button *ngIf="segment == 'positive'" size="small" fill="solid" (click)="redirectToEdit($event,null)"
             matTooltip="{{'Create a new positive list.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
-          <ion-button *ngIf="segment != 'positive'" size="small" (click)="writeConfig()"
+          <ion-button *ngIf="segment != 'positive'" size="small" fill="solid" (click)="writeConfig()"
             matTooltip="{{'Write proxy configuration and restart proxy.' | translate }}">
             <ion-icon slot="icon-only" color="success" name="checkmark"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="restartProxy()" matTooltip="{{'Restart proxy.' | translate }}">
-            <ion-icon slot="icon-only" name="arrow-redo"  color="tertiary"></ion-icon>
+          <ion-button size="small" fill="solid" (click)="restartProxy()" matTooltip="{{'Restart proxy.' | translate }}">
+            <ion-icon slot="icon-only" name="arrow-redo" color="tertiary"></ion-icon>
           </ion-button>
-        </ion-col>
-      </ion-row>
-      <ion-row *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix'">
-        <ion-col size=12>
-          <form #addNewDomainForm="ngForm">
-            <ion-item>
-              <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
-                pattern="[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
-              <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
-                <ion-icon slot="icon-only" name="add"></ion-icon>
-              </ion-button>
-            </ion-item>
-          </form>
-        </ion-col>
-      </ion-row>
+        </ion-buttons>
+      </ion-toolbar>
     </ion-card-header>
     <ion-card-content *ngIf="segment == 'basic'">
       <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
@@ -81,6 +73,15 @@
       </ag-grid-angular>
     </ion-card-content>
     <ion-content *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix' || segment == 'positive'">
+      <form #addNewDomainForm="ngForm" *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix'">
+        <ion-item>
+          <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
+            pattern="[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
+          <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
+            <ion-icon slot="icon-only" name="add"></ion-icon>
+          </ion-button>
+        </ion-item>
+      </form>
       <ion-list>
         <ion-item *ngFor="let dom of lists[segment]; index as i">{{dom}}
           <ion-button slot="end" (click)="deleteDomain(i)">
