--- a/src/app/protected/cranix/system/acls/system-acls.component.html
+++ b/src/app/protected/cranix/system/acls/system-acls.component.html
@@ -1,9 +1,11 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
-  <ion-header>
-    <ion-title>{{ 'Manage system acls for groups and users' | translate}}
-    </ion-title>
-  </ion-header>
+  <ion-row class="header-row">
+    <ion-col size=12>
+      <ion-title>{{ 'Manage system acls for groups and users' | translate}}
+      </ion-title>
+    </ion-col>
+  </ion-row>
   <ion-card>
     <ion-card-content>
       <ion-grid>
@@ -15,16 +17,10 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="groupFilterChanged()"
                 id="groupFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular
-              [context]="context"
-              style="width: 100%; height: 100%;"
-              class="{{authService.settings.agGridThema}}"
-              rowHeight="{{authService.settings.rowHeight}}"
-              [rowData]="groupsData"
-              [columnDefs]="groupColumnDefs"
-              [defaultColDef]="defaultColDef"
-              (gridReady)="groupsReady($event)"
-              id="groupsTable">
+            <ag-grid-angular [context]="context" style="width: 100%; height: 100%;"
+              class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+              [rowData]="groupsData" [columnDefs]="groupColumnDefs" [defaultColDef]="defaultColDef"
+              (gridReady)="groupsReady($event)" id="groupsTable">
             </ag-grid-angular>
           </ion-col>
           <ion-col size=12 sizeMd=12 sizeLg=6 sizeXl=6>
@@ -35,16 +31,10 @@
                 id="userFilter">
               </ion-input>
             </ion-item>
-            <ag-grid-angular
-              [context]="context"
-              style="width: 100%; height: 100%;"
-              class="{{authService.settings.agGridThema}}"
-              rowHeight="{{authService.settings.rowHeight}}"
-              [rowData]="usersData"
-              [columnDefs]="userColumnDefs"
-              [defaultColDef]="defaultColDef"
-              (gridReady)="usersReady($event)"
-              id="usersTable">
+            <ag-grid-angular [context]="context" style="width: 100%; height: 100%;"
+              class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+              [rowData]="usersData" [columnDefs]="userColumnDefs" [defaultColDef]="defaultColDef"
+              (gridReady)="usersReady($event)" id="usersTable">
             </ag-grid-angular>
           </ion-col>
         </ion-row>
