Set menu-button-color explicit

--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button [autoHide]="utilService.okBrowser"></ion-menu-button>
+      <ion-menu-button [autoHide]="utilService.okBrowser" color="#ffffff"></ion-menu-button>
     </ion-buttons>  
     <ion-buttons slot="end">
       <ion-button fill="clear" (click)="objectService.initialize(true)" matTooltip="{{ 'Refresh all objects' | translate }}">
