New feature monitor status of system services.

--- a/src/app/protected/cranix/system/system.page.html
+++ b/src/app/protected/cranix/system/system.page.html
@@ -5,6 +5,11 @@
         <ion-label>{{ 'System status' | translate}}</ion-label>
       </ion-tab-button>
  
+      <ion-tab-button tab="services">
+        <ion-icon name="pulse"></ion-icon>
+        <ion-label>{{ 'System services' | translate}}</ion-label>
+      </ion-tab-button>
+
       <ion-tab-button tab="config">
         <ion-icon name="cog"></ion-icon>
         <ion-label>{{ 'Server configuration' | translate}}</ion-label>
